Implemented license setting (without JSON-LD) + refactored